# aegis

./: .dockerignore  .env.example  .gitignore  Aegis Forex Tasks & Milestones.md  Aegis Tasks & Milestones.md  Dockerfile  Dockerfile.soak  README.md  aegis.sqlite-shm  aegis.sqlite-wal  fly.testnet-soak.toml  fly.toml  parking-lot.md  pyproject.toml  soak_state.json  studynote.md
.github/workflows/: ci.yml  post-m1-deploy.yml
config/: config.yaml  forex.yaml  intraday.yaml
data/: backtest_report.txt
deploy/: README.md  install-launchd.sh  ops.md  post-m1-deploy.sh  sunday-review.md  sync-collector-db.sh  testnet-soak.md
deploy/launchd/: com.aegis.ingest.plist.template  com.aegis.intraday.plist.template  com.aegis.kpi.plist.template  com.aegis.portfolio.plist.template  com.aegis.scanner.plist.template  com.aegis.telegrambot.plist.template
docs/: Aegis Concept.md  Aegis Forex Tasks & Milestones.md  Aegis Intraday Tasks & Milestones.md  Aegis Tasks & Milestones.md  README.md  parking-lot.md  studynote.md
research/: 2026-06-strategy_a_baseline_backtest.md  README.md  forex-edge-framework.md  forex-h11c-report.md  forex-h11c-verdict.md  forex-hypothesis-sweep-verdict.md  forex-parking-lot.md  forex-scm-fx1-baseline.md  forex-scm-fx2-verdict.md  forex-scm-sweep-report.md  forex-scm-sweep-verdict.md  forex-scm-verdict.md  m4-soak-verdict.md  oxfordstrat-seeds.md
research/crypto/: 2026-06-strategy_b_verdict.md
research/forex/: forex-broker-choice.md  forex-fx3-verdict.md  forex-fx5-launch.md  forex-h11b-report.md  forex-h11b-verdict.md  forex-hypothesis-sweep-report.md  forex-hypothesis-sweep-verdict.md  forex-scm-sweep-verdict.md
research/goals/: H11c-3.json
research/runs/20260614T085826-6d2c2e0d/: manifest.json  metrics.json
research/skills/event_spike_fade/: SKILL.md
scripts/: forex-crontab.example
src/aegis/: __init__.py  collector.py  config.py  config_forex.py  config_intraday.py  log.py
src/aegis/backtest/: __init__.py  engine.py  forex_backtest_grid.py  forex_data.py  forex_fx3_run.py  forex_h11b_sweep.py  forex_h11c_sweep.py  forex_hypothesis_sweep.py  forex_realistic_backtest.py  forex_research_sweep.py  forex_scm_engine.py  forex_scm_run.py  intraday_engine.py  intraday_run.py  montecarlo.py  run.py  swing_engine.py  swing_run.py
src/aegis/core/: __init__.py  interfaces.py  models.py  timeframes.py
src/aegis/data/: __init__.py  as_of.py  db.py  download.py  forex_calendar.py  forex_download.py  forex_dxy.py  forex_histdata.py  forex_ingest.py  ingest.py  intraday_ingest.py  reconcile.py  scanner.py  scanner_join.py
src/aegis/execution/: __init__.py  fees.py  forex_market_data.py  forex_oanda.py  forex_paper.py  hyperliquid.py  hyperliquid_trading.py  intraday_market_data.py  intraday_paper.py  kraken.py  leg2_miss_drill.py  paper.py  soak_review.py  spread.py  sqlite_market_data.py  testnet_campaign.py  testnet_check.py  testnet_pairs.py  testnet_soak.py
src/aegis/monitor/: __init__.py  config_freeze.py  daily_scorecard.py  doctor.py  forex_calendar_alerts.py  forex_collector.py  forex_config_freeze.py  forex_fx0_check.py  forex_fx4_check.py  forex_fx5_check.py  forex_fx_r_check.py  forex_kpi.py  forex_reconcile.py  forex_scorecard.py  forex_summary.py  intraday_collector.py  intraday_config_freeze.py  intraday_kpi.py  intraday_scorecard.py  kpi.py  m1_check.py  m5_check.py  milestone_schedule.py  milestones.py  portfolio_collector.py  post_m1_deploy.py  progress.py  summary.py  telegram.py  telegram_bot.py  telegram_html.py  telegram_ping.py  trade_reflection.py
src/aegis/portfolio/: __init__.py  brain.py  forex_event_fade.py  forex_paper_run.py  intraday_paper_run.py  intraday_pipeline.py  paper_swing.py  spread_pipeline.py
src/aegis/research/: __init__.py  adversarial_review.py  decision_pipeline.py  recipe_compare.py  research_goals.py  run_manifest.py  situation_summary.py  trade_proposal.py
src/aegis/risk/: __init__.py  breaker_drill.py  breakers.py  correlation.py  costs.py  engine.py  forex_costs.py  forex_execution_model.py  sizing.py  slippage.py
src/aegis/strategy/: __init__.py  forex_confirms.py  forex_hypotheses.py  forex_hypothesis_specs.py  forex_session.py  forex_strategy_registry.py  intraday_momentum.py  kalman.py  regime.py  screening.py  swing.py  zscore.py
tests/: test_backtest.py  test_config.py  test_core_boundary.py  test_daily_scorecard.py  test_db.py  test_download.py  test_fees.py  test_forex_confirms.py  test_forex_fx0.py  test_forex_fx4.py  test_forex_fx5.py  test_forex_fx_r.py  test_forex_scm.py  test_ingest.py  test_intraday.py  test_kalman.py  test_log.py  test_m5_check.py  test_milestone_schedule.py  test_ops.py  test_paper_swing.py  test_parallel_ops.py  test_progress.py  test_regime.py  test_risk_phase2.py  test_scanner.py  test_scanner_join.py  test_screening.py  test_sizing_costs.py  test_spread_executor.py  test_spread_pipeline.py  test_summary_collector.py  test_swing.py  test_telegram.py  test_telegram_bot.py  test_testnet_pairs.py  test_trading_adapters.py  test_zscore.py
