[project]
name = "aegis"
version = "0.1.0"
description = "Autonomous crypto trading system - staged two-strategy bot (pairs trading + swing momentum)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
aegis-collect = "aegis.collector:main"
aegis-ingest = "aegis.data.ingest:main"
aegis-reconcile = "aegis.data.reconcile:main"
aegis-scan = "aegis.data.scanner:main"
aegis-summary = "aegis.monitor.summary:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
