[project]
name = "aegis"
version = "0.1.0"
description = "Autonomous crypto trading system - staged two-strategy bot (pairs trading + swing momentum)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "statsmodels>=0.14",
]

[project.scripts]
aegis-collect = "aegis.collector:main"
aegis-ingest = "aegis.data.ingest:main"
aegis-reconcile = "aegis.data.reconcile:main"
aegis-scan = "aegis.data.scanner:main"
aegis-summary = "aegis.monitor.summary:main"
aegis-testnet-check = "aegis.execution.testnet_check:main"
aegis-backtest = "aegis.backtest.run:main"
aegis-backtest-swing = "aegis.backtest.swing_run:main"
aegis-portfolio = "aegis.portfolio.brain:main"
aegis-download = "aegis.data.download:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
